* The kernel daemon no longer hold its lock when calling the registered hooks. * This fixes bug #5421.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36209 a95241bf-73f2-0310-859d-f6bbb57e9c96